🚧 (Crawler): Non multi-threaded crawler